--- a/Project2/MainWindow.xaml
+++ b/Project2/MainWindow.xaml
@@ -6,19 +6,36 @@
         xmlns:local="clr-namespace:Project2"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <Style x:Key="EstimateStyle" TargetType="{x:Type TextBox}">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding DetailsEstimateStatus}" Value="None">
+                    <Setter Property="Foreground" Value="Black" />
+                </DataTrigger>
+                <DataTrigger Binding="{Binding DetailsEstimateStatus}" Value="Good">
+                    <Setter Property="Foreground" Value="Green" />
+                </DataTrigger>
+                <DataTrigger Binding="{Binding DetailsEstimateStatus}" Value="Bad">
+                    <Setter Property="Foreground" Value="Red" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
-        <ListView Grid.Row="0">
+        <ListView Grid.Row="0" ItemsSource="{Binding Products}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Name"></GridViewColumn>
-                    <GridViewColumn Header="DateStart"></GridViewColumn>
-                    <GridViewColumn Header="Srok"></GridViewColumn>
+                    <GridViewColumn Header="Name" x:Name="Product"></GridViewColumn>
+                    <GridViewColumn Header="DateStart" x:Name="DateStart"></GridViewColumn>
+                    <GridViewColumn Header="Srok" x:Name="Srok"></GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
+        <Button Grid.Row="1" Content="Add" Margin="400 0 0 0" Width="50" Click="Button_Click"></Button>
+        <Button Grid.Row="1" Content="Delete" Margin="600 0 0 0" Width="50" Click="Button_Click_1"></Button>
     </Grid>
 </Window>
