Добавил функционал для окон ADD и Delete

--- a/Project2/View/AddNewProduct.xaml
+++ b/Project2/View/AddNewProduct.xaml
@@ -13,12 +13,16 @@
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Width="200">
             <TextBlock Text="Название"></TextBlock>
-            <TextBox x:Name="naamee"></TextBox>
-            <TextBlock Text="Дата изготовления"></TextBlock>
+            <TextBox x:Name="name" ></TextBox>
+            <TextBlock Text="День изготовления"></TextBlock>
             <TextBox x:Name="n1"></TextBox>
+            <TextBlock Text="Месяц изготовления"></TextBlock>
+            <TextBox x:Name="n3"></TextBox>
+            <TextBlock Text="Год изготовления"></TextBlock>
+            <TextBox x:Name="n4"></TextBox>
             <TextBlock Text="Срок годности"></TextBlock>
             <TextBox x:Name="n2"></TextBox>
         </StackPanel>
-        <Button Grid.Row="1" Content="Добавить продукт"></Button>
+        <Button Grid.Row="1" Content="Добавить продукт" Click="Button_Click"></Button>
     </Grid>
 </Window>
