--- a/Project2/MainWindow.xaml
+++ b/Project2/MainWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="Project2.MainWindow"
+﻿<Window x:Class="Project2.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Project2"
+        xmlns:local="clr-namespace:Project2.View"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Самая полезная программа в мире" Height="450" Width="800">
     <Window.Resources>
-        <Style x:Key="EstimateStyle" TargetType="{x:Type TextBox}">
+        <Style x:Key="EstimateStyle" TargetType="{x:Type ListViewItem}">
             <Style.Triggers>
                 <DataTrigger Binding="{Binding DetailsEstimateStatus}" Value="None">
                     <Setter Property="Foreground" Value="Black" />
@@ -26,12 +26,12 @@
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
-        <ListView Grid.Row="0" ItemsSource="{Binding Products}">
+        <ListView Grid.Row="0" ItemContainerStyle="{StaticResource EstimateStyle}"  ItemsSource="{Binding Products}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Name" x:Name="Product"></GridViewColumn>
-                    <GridViewColumn Header="DateStart" x:Name="DateStart"></GridViewColumn>
-                    <GridViewColumn Header="Srok" x:Name="Srok"></GridViewColumn>
+                    <GridViewColumn Header="Name" Width="200" x:Name="Product" DisplayMemberBinding="{Binding Path=Products}"></GridViewColumn>
+                    <GridViewColumn Header="DateStart" Width="150" x:Name="DateStart"  DisplayMemberBinding="{Binding Path=DateStart}"></GridViewColumn>
+                    <GridViewColumn Header="Srok" x:Name="Srok" Width="100" DisplayMemberBinding="{Binding Path=Srok}"></GridViewColumn> 
                 </GridView>
             </ListView.View>
         </ListView>
