--- a/Project2/View/DeleteProdukt.xaml
+++ b/Project2/View/DeleteProdukt.xaml
@@ -15,6 +15,6 @@
             <TextBlock Text="Название"></TextBlock>
             <TextBox x:Name="namee"></TextBox>
         </StackPanel>
-        <Button Grid.Row="1" Content="Удалить продукт"></Button>
+        <Button Grid.Row="1" Content="Удалить продукт" Click="Button_Click"></Button>
     </Grid>
 </Window>
