Был выполнен рефакторинг кода и настрока кнопок

--- a/Project2/View/AddNewProduct.xaml
+++ b/Project2/View/AddNewProduct.xaml
@@ -13,16 +13,16 @@
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Width="200">
             <TextBlock Text="Название"></TextBlock>
-            <TextBox x:Name="name" ></TextBox>
+            <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" ></TextBox>
             <TextBlock Text="День изготовления"></TextBlock>
-            <TextBox x:Name="n1"></TextBox>
+            <TextBox Text="{Binding Day, UpdateSourceTrigger=PropertyChanged}"></TextBox>
             <TextBlock Text="Месяц изготовления"></TextBlock>
-            <TextBox x:Name="n3"></TextBox>
+            <TextBox Text="{Binding Month, UpdateSourceTrigger=PropertyChanged}"></TextBox>
             <TextBlock Text="Год изготовления"></TextBlock>
-            <TextBox x:Name="n4"></TextBox>
+            <TextBox Text="{Binding Year, UpdateSourceTrigger=PropertyChanged}"></TextBox>
             <TextBlock Text="Срок годности"></TextBlock>
-            <TextBox x:Name="n2"></TextBox>
+            <TextBox Text="{Binding Time, UpdateSourceTrigger=PropertyChanged}"></TextBox>
         </StackPanel>
-        <Button Grid.Row="1" Content="Добавить продукт" Click="Button_Click"></Button>
+        <Button Grid.Row="1" Content="Добавить продукт" Command="{Binding AddCommand}"></Button>
     </Grid>
 </Window>
