--- a/Project2/MainWindow.xaml
+++ b/Project2/MainWindow.xaml
@@ -26,16 +26,17 @@
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
-        <ListView Grid.Row="0" ItemContainerStyle="{StaticResource EstimateStyle}"  ItemsSource="{Binding Products}">
+        <ListView Grid.Row="0" ItemContainerStyle="{StaticResource EstimateStyle}"  ItemsSource="{Binding Product}" SelectedItem="{Binding SelectedProduct}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Name" Width="200" x:Name="Product" DisplayMemberBinding="{Binding Path=Products}"></GridViewColumn>
                     <GridViewColumn Header="DateStart" Width="150" x:Name="DateStart"  DisplayMemberBinding="{Binding Path=DateStart}"></GridViewColumn>
-                    <GridViewColumn Header="Srok" x:Name="Srok" Width="100" DisplayMemberBinding="{Binding Path=Srok}"></GridViewColumn> 
+                    <GridViewColumn Header="Srok" x:Name="Srok" Width="100" DisplayMemberBinding="{Binding Path=Srok}"></GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Grid.Row="1" Content="Add" Margin="400 0 0 0" Width="50" Click="Button_Click"></Button>
-        <Button Grid.Row="1" Content="Delete" Margin="600 0 0 0" Width="50" Click="Button_Click_1"></Button>
+        <Button Grid.Row="1" Content="Add" Margin="400 0 0 0" Width="50" Command="{Binding OpenCommand}"></Button>
+        <Button Grid.Row="1" Content="Delete" Margin="600 0 0 0" Width="50" Command="{Binding RemoveCommand}"
+                    CommandParameter="{Binding SelectedProduct}"></Button>
     </Grid>
 </Window>
