--- a/Project2/MainWindow.xaml
+++ b/Project2/MainWindow.xaml
@@ -5,18 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Project2.View"
         mc:Ignorable="d"
-        Title="Самая полезная программа в мире" Height="450" Width="800">
+        Title="Самая полезная программа в мире" MinHeight="450" MinWidth="800">
     <Window.Resources>
         <Style x:Key="EstimateStyle" TargetType="{x:Type ListViewItem}">
             <Style.Triggers>
-                <DataTrigger Binding="{Binding DetailsEstimateStatus}" Value="None">
-                    <Setter Property="Foreground" Value="Black" />
+                <DataTrigger Binding="{Binding EstimateStatus}" Value="None">
+                    <Setter Property="Background" Value="White" />
                 </DataTrigger>
-                <DataTrigger Binding="{Binding DetailsEstimateStatus}" Value="Good">
-                    <Setter Property="Foreground" Value="Green" />
+                <DataTrigger Binding="{Binding EstimateStatus}" Value="Good">
+                    <Setter Property="Background" Value="Green" />
                 </DataTrigger>
-                <DataTrigger Binding="{Binding DetailsEstimateStatus}" Value="Bad">
-                    <Setter Property="Foreground" Value="Red" />
+                <DataTrigger Binding="{Binding EstimateStatus}" Value="Bad">
+                    <Setter Property="Background" Value="Red" />
                 </DataTrigger>
             </Style.Triggers>
         </Style>
@@ -26,7 +26,7 @@
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
-        <ListView Grid.Row="0" ItemContainerStyle="{StaticResource EstimateStyle}"  ItemsSource="{Binding Product}" SelectedItem="{Binding SelectedProduct}">
+        <ListView Grid.Row="0" ItemContainerStyle="{StaticResource EstimateStyle}"  ItemsSource="{Binding Product}" SelectedItem="{Binding SelectedProduct}" IsEnabled="True" RenderTransformOrigin="0.5,0.5">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Name" Width="200" x:Name="Product" DisplayMemberBinding="{Binding Path=Products}"></GridViewColumn>
@@ -36,7 +36,6 @@
             </ListView.View>
         </ListView>
         <Button Grid.Row="1" Content="Add" Margin="400 0 0 0" Width="50" Command="{Binding OpenCommand}"></Button>
-        <Button Grid.Row="1" Content="Delete" Margin="600 0 0 0" Width="50" Command="{Binding RemoveCommand}"
-                    CommandParameter="{Binding SelectedProduct}"></Button>
+        <Button Grid.Row="1" Content="Delete" Margin="600 0 0 0" Width="50" Command="{Binding RemoveCommand}" CommandParameter="{Binding SelectedProduct}"></Button>
     </Grid>
 </Window>
